# aoc-25

./: aoc2025.opam  dune-project  flake.nix
data/: day02.main
lib/: day01.ml  day02.ml  day03.ml  day08.ml  day19.ml  day21.ml  dune
