(lang dune 3.11)

(name aoc2025)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Code Jazz")

(maintainers "Code Jazz")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2025)
 (synopsis "Advent of Code 2025")
 (description "Solutions to Advent of Code 2025")
 (depends
   ocaml
   dune
   core
   fmt
 )
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
